cmake_minimum_required(VERSION 3.14)
project(linux_c_practice C)

set(CMAKE_C_STANDARD 99)

add_subdirectory(ch4/)
add_subdirectory(ch5/)
add_subdirectory(ch6-file/)
add_subdirectory(ch7-process/)
add_subdirectory(ch8-thread/)
add_subdirectory(ch9-signal/)
add_subdirectory(ch10-ipc/)
add_subdirectory(ch12-gtk/)
add_subdirectory(ch13-bittorrent/)