add_executable(pipe pipe.c)
add_executable(dual_pipe dual_pipe.c)
add_subdirectory(pipe-example/)
add_subdirectory(namedpipe-example1/)
add_subdirectory(namedpipe-example2/)
add_executable(sendmsg sendmsg.c)
add_executable(recvmsg recvmsg.c)
add_executable(opmsg opmsg.c)
add_subdirectory(queue-example/)
add_subdirectory(sem-example/)
add_subdirectory(shmem-example/)
add_subdirectory(mmap-normalfile/)
add_executable(mmap_anon mmap_anon.c)
add_executable(mmap_access mmap_access.c)
